--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.171.1",
+    "@types/aws-lambda": "^8.10.146",
+    "aws-cdk-lib": "^2.172.0",
     "cdk-nextjs-standalone": "^4.1.1",
     "constructs": "^10.4.2"
   }
