--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "13.5.7",
+    "eslint-config-next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
     "typescript": "^5"
   }
 }
