--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.9.0"
+    "@opentelemetry/api": "^1.9.0",
+    "next": "13.5.7",
+    "eslint-config-next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
