--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "next": "13.5.7",
     "eslint-config-next": "^13.5.6",
+    "next": "13.5.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.146",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
